# previsao-do-tempo

./: README.md  pyproject.toml  requirements.txt
fiec/: analise_comparativa_modelos.ipynb  analise_exploratoria.ipynb
models/: best_model_temp_2.joblib
notebooks/: analise_comparativa_modelos.ipynb  analise_exploratoria.ipynb
